feat: allow embedded group form item in group applications
* Now is possible to use embedded group form item also in group applications. It means that we can
specify in group form for which subgroups should be created also embedded application.
* There are several new methods which interacts with new table. Old functionality is deprecated.
* Old test were moved from GroupsManagerEntryIntegrationTest file to the RegistrarBaseIntegrationTest. New tests for subgroups were added, too.
* Implementation into the old gui is a part of this commit.

BREAKING CHANGE: new database table auto_registration_group was created, data from the old table
groups_to_register should be migrated into this new table with appropriate relation to form_item_id